--- a/client/index.html
+++ b/client/index.html
@@ -37,5 +37,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- <script type="text/javascript" src="bundle.js"></script> -->
-  <script type="text/javascript" src="app.bundle.js"></script></body>
+  </body>
 </html>
